add sass component

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <!-- Потім ваші стилі -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body class="body">
     <header class="page-header">
@@ -59,19 +60,19 @@
           <h2 class="section-title visually-hidden">Галерея робіт</h2>
           <ul class="secondary-button list">
             <li class="filter-item">
-              <button class="button secondary" type="button">Всі</button>
+              <button class="button-gallery" type="button">Всі</button>
             </li>
             <li class="filter-item">
-              <button class="button secondary" type="button">Веб-сайти</button>
+              <button class="button-gallery" type="button">Веб-сайти</button>
             </li>
             <li class="filter-item">
-              <button class="button secondary" type="button">Додатки</button>
+              <button class="button-gallery" type="button">Додатки</button>
             </li>
             <li class="filter-item">
-              <button class="button secondary" type="button">Дизайн</button>
+              <button class="button-gallery" type="button">Дизайн</button>
             </li>
             <li class="filter-item">
-              <button class="button secondary" type="button">Маркетинг</button>
+              <button class="button-gallery" type="button">Маркетинг</button>
             </li>
           </ul>
           <ul class="gallery list">
