--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <!-- Потім ваші стилі -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!-- <div class="container"> -->
@@ -23,8 +24,8 @@
       <div class="container header-flex">
         <!-- navigation -->
         <nav class="nav-flex">
-          <a lang="en" class="header logo link" href="/"
-            ><span class="logo-acent">Web</span>Studio</a
+          <a lang="en" class="logo header__logo" href="/"
+            ><span class="logo-accent">Web</span>Studio</a
           >
           <ul class="site-nav list">
             <li class="list-item"><a class="link current" href="./index.html">Студія</a></li>
@@ -58,7 +59,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-          <button data-modal-open class="button primary" type="button">Замовити послугу</button>
+          <button data-modal-open class="button-hero" type="button">Замовити послугу</button>
         </div>
       </section>
       <!-- our benefits -->
@@ -161,31 +162,31 @@
               <div class="member-text">
                 <h3 class="members-title">Ігор Дем`яненко</h3>
                 <p class="member-position" lang="en">Product Designer</p>
-                <ul class="social-list list">
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                <ul class="social-list">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-instagram" />
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-twitter" />
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-facebook" />
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-linkedin" />
                       </svg>
                     </a>
@@ -203,31 +204,31 @@
               <div class="member-text">
                 <h3 class="members-title">Ольга Рєпіна</h3>
                 <p class="member-position" lang="en">Frontend Developer</p>
-                <ul class="social-list list">
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                <ul class="social-list">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-instagram" />
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-twitter" />
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-facebook" />
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-linkedin" />
                       </svg>
                     </a>
@@ -245,31 +246,31 @@
               <div class="member-text">
                 <h3 class="members-title">Микола Тарасов</h3>
                 <p class="member-position" lang="en">Marketing</p>
-                <ul class="social-list list">
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                <ul class="social-list">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-instagram" />
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-twitter" />
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-facebook" />
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-linkedin" />
                       </svg>
                     </a>
@@ -287,31 +288,31 @@
               <div class="member-text">
                 <h3 class="members-title">Михайло Єрмаков</h3>
                 <p class="member-position" lang="en">UI Designer</p>
-                <ul class="social-list list">
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                <ul class="social-list">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-instagram" />
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-twitter" />
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-facebook" />
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-href" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__href" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./images/icon-sprite-compress.svg#icon-linkedin" />
                       </svg>
                     </a>
@@ -376,8 +377,8 @@
     <footer class="footer">
       <div class="container footer-flex">
         <div class="ff-item">
-          <a lang="en" class="footer logo link" href="/"
-            ><span class="logo-acent">Web</span>Studio</a
+          <a lang="en" class="logo footer__logo" href="/"
+            ><span class="logo-accent">Web</span>Studio</a
           >
           <address>
             <ul class="footer-contacts list">
@@ -404,50 +405,53 @@
         </div>
         <div class="ff-item social">
           <h3 class="social-title">приєднуйтесь</h3>
-          <ul class="social-list list">
-            <li class="social-item">
-              <a href="" class="social-href">
-                <svg class="social-icon" width="20" height="20">
+          <ul class="social-list footer__social-list">
+            <li class="social-list__item">
+              <a class="social-list__href social-list__href--dark" href="">
+                <svg class="social-list__icon" width="20" height="20">
                   <use href="./images/icon-sprite-compress.svg#icon-instagram" />
                 </svg>
               </a>
             </li>
-            <li class="social-item">
-              <a href="" class="social-href">
-                <svg class="social-icon" width="20" height="20">
+            <li class="social-list__item">
+              <a class="social-list__href social-list__href--dark" href="">
+                <svg class="social-list__icon" width="20" height="20">
                   <use href="./images/icon-sprite-compress.svg#icon-twitter" />
                 </svg>
               </a>
             </li>
-            <li class="social-item">
-              <a href="" class="social-href">
-                <svg class="social-icon" width="20" height="20">
+            <li class="social-list__item">
+              <a class="social-list__href social-list__href--dark" href="">
+                <svg class="social-list__icon" width="20" height="20">
                   <use href="./images/icon-sprite-compress.svg#icon-facebook" />
                 </svg>
               </a>
             </li>
-            <li class="social-item">
-              <a href="" class="social-href">
-                <svg class="social-icon" width="20" height="20">
+            <li class="social-list__item">
+              <a class="social-list__href social-list__href--dark" href="">
+                <svg class="social-list__icon" width="20" height="20">
                   <use href="./images/icon-sprite-compress.svg#icon-linkedin" />
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <div class="ff-item form">
-          <h3 class="social-title">Підпишіться на розсилку</h3>
-          <form action="javascript:void(0);" class="footer-form">
+
+        <!-- subscribe form -->
+
+        <div class="subscribe-form__container">
+          <h3 class="subscribe-form__title">Підпишіться на розсилку</h3>
+          <form action="javascript:void(0);" class="subscribe-form">
             <input
               type="email"
-              class="form-item email"
+              class="subscribe-form__email"
               name="footer email"
               id="footer-email"
               placeholder="E-mail"
             />
-            <button type="submit" class="button primary submit">
+            <button type="submit" class="subscribe-form__button">
               Підписатися
-              <svg class="send-icon" width="24" height="24">
+              <svg class="subscribe-form__icon" width="24" height="24">
                 <use href="./images/icon-sprite-compress.svg#icon-send" />
               </svg>
             </button>
@@ -455,10 +459,13 @@
         </div>
       </div>
     </footer>
+
+    <!-- === modal window === -->
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <div data-modal-close class="cross-frame">
-          <svg class="icon-cross" width="11" height="11">
+        <div data-modal-close class="modal__cross-frame">
+          <svg class="modal__cross-icon" width="11" height="11">
             <use href="./images/icon-sprite-compress.svg#icon-cross" />
           </svg>
         </div>
