--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-          <button data-modal-open class="button-hero" type="button">Замовити послугу</button>
+          <button data-modal-open class="button-primary" type="button">Замовити послугу</button>
         </div>
       </section>
       <!-- our benefits -->
@@ -449,7 +449,7 @@
               id="footer-email"
               placeholder="E-mail"
             />
-            <button type="submit" class="subscribe-form__button">
+            <button type="submit" class="button-primary subscribe-form__button-primary">
               Підписатися
               <svg class="subscribe-form__icon" width="24" height="24">
                 <use href="./images/icon-sprite-compress.svg#icon-send" />
@@ -470,35 +470,35 @@
           </svg>
         </div>
 
-        <p class="modal-header">Залиште свої дані, ми вам зателефонуємо</p>
+        <p class="modal__title">Залиште свої дані, ми вам зателефонуємо</p>
         <form action="javascript:void(0);" class="modal-form">
-          <div class="form-item">
-            <label class="modal-label modal-text" for="modal-name">Ім'я</label>
-            <input class="modal-input" type="text" name="modal-name" id="modal-name" />
-            <svg class="form-icon" width="18px" height="18px">
+          <div class="modal-form__item">
+            <label class="modal-form__label" for="modal-name">Ім'я</label>
+            <input class="modal-form__name" type="text" name="modal-name" id="modal-name" />
+            <svg class="modal-form__icon" width="18px" height="18px">
               <use href="./images/icon-sprite-compress.svg#icon-person"></use>
             </svg>
           </div>
 
-          <div class="form-item">
-            <label class="modal-label modal-text" for="modal-tel">Телефон</label>
-            <input class="modal-input" type="tel" name="modal-tel" id="modal-tel" />
-            <svg class="form-icon" width="18px" height="18px">
+          <div class="modal-form__item">
+            <label class="modal-form__label" for="modal-tel">Телефон</label>
+            <input class="modal-form__tel" type="tel" name="modal-tel" id="modal-tel" />
+            <svg class="modal-form__icon" width="18px" height="18px">
               <use href="./images/icon-sprite-compress.svg#icon-phone"></use>
             </svg>
           </div>
 
-          <div class="form-item">
-            <label class="modal-label modal-text" for="modal-email">Пошта</label>
-            <input class="modal-input" type="email" name="modal-email" id="modal-email" />
-            <svg class="form-icon" width="18px" height="18px">
+          <div class="modal-form__item">
+            <label class="modal-form__label" for="modal-email">Пошта</label>
+            <input class="modal-form__email" type="email" name="modal-email" id="modal-email" />
+            <svg class="modal-form__icon" width="18px" height="18px">
               <use href="./images/icon-sprite-compress.svg#icon-mail"></use>
             </svg>
           </div>
-          <div class="textarea-item">
-            <label class="modal-label modal-text" for="modal-comment">Коментар</label>
+          <div class="modal-form__textarea">
+            <label class="modal-form__label" for="modal-comment">Коментар</label>
             <textarea
-              class="modal-textarea modal-text"
+              class="modal-form__comment"
               name="modal-comment"
               id="modal-comment"
               cols="30"
@@ -507,17 +507,22 @@
             ></textarea>
           </div>
 
-          <label class="modal-label checkbox">
-            <input class="modal-checkbox" type="checkbox" name="modal-checkbox" />
-            <span class="checkbox-mod">
-              <span class="checkbox-mod checked"></span>
-              <span class="checkbox-mod unchecked"></span>
+          <label class="modal-form__policy">
+            <input
+              class="modal-form__checkbox visually-hidden"
+              type="checkbox"
+              name="modal-checkbox"
+            />
+            <span class="modal-form__custom-checkbox">
+              <svg class="modal-form__custom-checkbox-icon" width="16" height="16">
+                <use href="./images/icon-sprite-compress.svg#icon-check"></use>
+              </svg>
             </span>
             Погоджуюся з розсилкою та приймаю&nbsp;
-            <a href="" class="agreement-href">Умови договору</a>
+            <a href="" class="modal-form__policy-link">Умови договору</a>
           </label>
 
-          <button class="button primary form" type="submit">Надіслати</button>
+          <button class="button-primary modal-form__button-primary" type="submit">Надіслати</button>
         </form>
       </div>
     </div>
