--- a/portfolio.html
+++ b/portfolio.html
@@ -20,31 +20,35 @@
   </head>
   <body class="body">
     <header class="page-header">
-      <div class="container header-flex">
+      <div class="page-header__container">
         <!-- navigation -->
-        <nav class="nav-flex">
-          <a lang="en" class="header logo link" href="/"
-            ><span class="logo-acent">Web</span>Studio</a
+        <nav class="navigation">
+          <a lang="en" class="logo header__logo" href="/"
+            ><span class="logo-accent">Web</span>Studio</a
           >
-          <ul class="site-nav list">
-            <li class="list-item"><a class="link" href="./index.html">Студія</a></li>
-            <li class="list-item"><a class="link current" href="./portfolio.html">Портфоліо</a></li>
-            <li class="list-item"><a class="link" href="">Контакти</a></li>
+          <ul class="nav-menu">
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="./index.html">Студія</a>
+            </li>
+            <li class="nav-menu__item">
+              <a class="nav-menu__link current" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="nav-menu__item"><a class="nav-menu__link" href="">Контакти</a></li>
           </ul>
         </nav>
         <!-- contacts -->
-        <ul class="header-contacts list">
-          <li class="list-item">
-            <a class="header-contacts link" href="mailto:info@devstudio.com">
-              <svg class="icon-contact" width="16" height="12">
+        <ul class="header-contacts">
+          <li class="header-contacts__item">
+            <a class="header-contacts__link" href="mailto:info@devstudio.com">
+              <svg class="header-contacts__icon" width="16" height="12">
                 <use href="./images/icon-sprite-compress.svg#icon-email"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="list-item">
-            <a class="header-contacts link" href="tel:+380961111111">
-              <svg class="icon-contact" width="10" height="16">
+          <li class="header-contacts__item">
+            <a class="header-contacts__link" href="tel:+380961111111">
+              <svg class="header-contacts__icon" width="10" height="16">
                 <use href="./images/icon-sprite-compress.svg#icon-tel"></use>
               </svg>
               +38 096 111 11 11</a
