herro, benefits section refactored

--- a/index.html
+++ b/index.html
@@ -62,49 +62,49 @@
       <!--Hero section-->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+          <h1 class="hero__title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
           <button data-modal-open class="button-primary" type="button">Замовити послугу</button>
         </div>
       </section>
       <!-- our benefits -->
-      <section class="section benefits">
+      <section class="section benefits__section">
         <div class="container">
           <h2 class="visually-hidden">НАШІ ПЕРЕВАГИ</h2>
-          <ul class="benefits list">
-            <li class="benefits-item">
-              <div class="picture">
-                <svg class="details" width="70" height="70">
+          <ul class="benefits">
+            <li class="benefits__item">
+              <div class="benefits__icon-wrap">
+                <svg class="benefits__icon" width="70" height="70">
                   <use href="./images/icon-sprite-compress.svg#icon-antenna" />
                 </svg>
               </div>
-              <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <h3 class="benefits__item-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p>Ідейні міркування, а також початок повсякденної роботи по формуванню позиції.</p>
             </li>
-            <li class="benefits-item">
-              <div class="picture">
-                <svg class="punctuality" width="70" height="70">
+            <li class="benefits__item">
+              <div class="benefits__icon-wrap">
+                <svg class="benefits__icon" width="70" height="70">
                   <use href="./images/icon-sprite-compress.svg#icon-clock" />
                 </svg>
               </div>
-              <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <h3 class="benefits__item-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p>Задача організації, особливо ж рамки та місце навчання кадрів тягне за собою.</p>
             </li>
-            <li class="benefits-item">
-              <div class="picture">
-                <svg class="planing" width="70" height="70">
+            <li class="benefits__item">
+              <div class="benefits__icon-wrap">
+                <svg class="benefits__icon" width="70" height="70">
                   <use href="./images/icon-sprite-compress.svg#icon-diagram" />
                 </svg>
               </div>
-              <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
+              <h3 class="benefits__item-title">ПЛАНУВАННЯ</h3>
               <p>Так само консультація з широким активом значно обумовлює.</p>
             </li>
-            <li class="benefits-item">
-              <div class="picture">
-                <svg class="technology" width="70" height="70">
+            <li class="benefits__item">
+              <div class="benefits__icon-wrap">
+                <svg class="benefits__icon" width="70" height="70">
                   <use href="./images/icon-sprite-compress.svg#icon-astronaut" />
                 </svg>
               </div>
-              <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <h3 class="benefits__item-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p>Значимість цих проблем є настільки очевидною, що реалізація планових завдань.</p>
             </li>
           </ul>
