--- a/index.html
+++ b/index.html
@@ -114,37 +114,37 @@
       <section class="section">
         <div class="container">
           <h2 class="section-title">Чим ми займаємось</h2>
-          <ul class="specialization list">
-            <li class="specialization-item">
+          <ul class="specialization">
+            <li class="specialization__item">
               <img
-                class="img-block"
+                class="specialization__image"
                 src="./images/squoosh_img1.jpg"
                 alt="розробляємо веб додатки"
                 width="370"
               />
-              <div class="text-tumb">
+              <div class="specialization__text-wrap">
                 <h3>Десктопні застосунки</h3>
               </div>
             </li>
-            <li class="specialization-item">
+            <li class="specialization__item">
               <img
-                class="img-block"
+                class="specialization__image"
                 src="./images/squoosh_img2.jpg"
                 alt="розробляємо мобільні додатки"
                 width="370"
               />
-              <div class="text-tumb">
+              <div class="specialization__text-wrap">
                 <h3>мобільні застосунки</h3>
               </div>
             </li>
-            <li class="specialization-item">
+            <li class="specialization__item">
               <img
-                class="img-block"
+                class="specialization__image"
                 src="./images/squoosh_img3.jpg"
                 alt="стилізуємо наші розробки"
                 width="370"
               />
-              <div class="text-tumb">
+              <div class="specialization__text-wrap">
                 <h3>дизайнерські рішення</h3>
               </div>
             </li>
@@ -152,20 +152,20 @@
         </div>
       </section>
       <!-- our company -->
-      <section class="section section-company">
+      <section class="section team__section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="members list">
-            <li class="members-item">
+          <ul class="team">
+            <li class="team-member">
               <img
-                class="img-block"
+                class="team-member__image"
                 src="./images/squoosh_portret1.jpg"
                 alt="Ігор Дем`яненко"
                 width="270"
               />
-              <div class="member-text">
-                <h3 class="members-title">Ігор Дем`яненко</h3>
-                <p class="member-position" lang="en">Product Designer</p>
+              <div class="team-member__wrap">
+                <h3 class="team-member__title">Ігор Дем`яненко</h3>
+                <p class="team-member__position" lang="en">Product Designer</p>
                 <ul class="social-list">
                   <li class="social-list__item">
                     <a class="social-list__href" href="">
@@ -198,16 +198,16 @@
                 </ul>
               </div>
             </li>
-            <li class="members-item">
+            <li class="team-member">
               <img
-                class="img-block"
+                class="team-member__image"
                 src="./images/squoosh_portret2.jpg"
                 alt="Ольга Рєпіна"
                 width="270"
               />
-              <div class="member-text">
-                <h3 class="members-title">Ольга Рєпіна</h3>
-                <p class="member-position" lang="en">Frontend Developer</p>
+              <div class="team-member__wrap">
+                <h3 class="team-member__title">Ольга Рєпіна</h3>
+                <p class="team-member__position" lang="en">Frontend Developer</p>
                 <ul class="social-list">
                   <li class="social-list__item">
                     <a class="social-list__href" href="">
@@ -240,16 +240,16 @@
                 </ul>
               </div>
             </li>
-            <li class="members-item">
+            <li class="team-member">
               <img
-                class="img-block"
+                class="team-member__image"
                 src="./images/squoosh_portret3.jpg"
                 alt="Микола Тарасов"
                 width="270"
               />
-              <div class="member-text">
-                <h3 class="members-title">Микола Тарасов</h3>
-                <p class="member-position" lang="en">Marketing</p>
+              <div class="team-member__wrap">
+                <h3 class="team-member__title">Микола Тарасов</h3>
+                <p class="team-member__position" lang="en">Marketing</p>
                 <ul class="social-list">
                   <li class="social-list__item">
                     <a class="social-list__href" href="">
@@ -282,16 +282,16 @@
                 </ul>
               </div>
             </li>
-            <li class="members-item">
+            <li class="team-member">
               <img
-                class="img-block"
+                class="team-member__image"
                 src="./images/squoosh_portret4.jpg"
                 alt="Михайло Єрмаков"
                 width="270"
               />
-              <div class="member-text">
-                <h3 class="members-title">Михайло Єрмаков</h3>
-                <p class="member-position" lang="en">UI Designer</p>
+              <div class="team-member__wrap">
+                <h3 class="team-member__title">Михайло Єрмаков</h3>
+                <p class="team-member__position" lang="en">UI Designer</p>
                 <ul class="social-list">
                   <li class="social-list__item">
                     <a class="social-list__href" href="">
@@ -328,48 +328,48 @@
         </div>
       </section>
       <!-- permanent client -->
-      <section class="section permanent-client">
+      <section class="section">
         <div class="container">
           <h2 class="section-title">Постійні клієнти</h2>
-          <ul class="permanent list">
-            <li class="permanent-item">
-              <a href="" class="permanent-href">
-                <svg class="permanent-icon" width="41" height="47">
+          <ul class="clients">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="41" height="47">
                   <use href="./images/icon-sprite-compress.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
-            <li class="permanent-item">
-              <a href="" class="permanent-href">
-                <svg class="permanent-icon" width="40" height="52">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="40" height="52">
                   <use href="./images/icon-sprite-compress.svg#icon-client2"></use>
                 </svg>
               </a>
             </li>
-            <li class="permanent-item">
-              <a href="" class="permanent-href">
-                <svg class="permanent-icon" width="44" height="42">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="44" height="42">
                   <use href="./images/icon-sprite-compress.svg#icon-client3"></use>
                 </svg>
               </a>
             </li>
-            <li class="permanent-item">
-              <a href="" class="permanent-href">
-                <svg class="permanent-icon" width="85" height="41">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="85" height="41">
                   <use href="./images/icon-sprite-compress.svg#icon-client4"></use>
                 </svg>
               </a>
             </li>
-            <li class="permanent-item">
-              <a href="" class="permanent-href">
-                <svg class="permanent-icon" width="63" height="45">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="63" height="45">
                   <use href="./images/icon-sprite-compress.svg#icon-client5"></use>
                 </svg>
               </a>
             </li>
-            <li class="permanent-item">
-              <a href="" class="permanent-href">
-                <svg class="permanent-icon" width="94" height="44">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="94" height="44">
                   <use href="./images/icon-sprite-compress.svg#icon-client6"></use>
                 </svg>
               </a>
@@ -379,16 +379,16 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer-flex">
-        <div class="ff-item">
+      <div class="container footer__container">
+        <div class="footer-group">
           <a lang="en" class="logo footer__logo" href="/"
             ><span class="logo-accent">Web</span>Studio</a
           >
           <address>
-            <ul class="footer-contacts list">
-              <li class="footer-contact-item">
+            <ul class="footer-contacts">
+              <li class="footer-contacts__item">
                 <a
-                  class="footer-adress link"
+                  class="footer-contacts__link footer-contacts__link--adress"
                   href="https://goo.gl/maps/kmzWkeFPWZeqgjE26"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -396,19 +396,19 @@
                   м. Київ, пр-т Лесі Українки, 26
                 </a>
               </li>
-              <li class="footer-contact-item">
-                <a class="footer-contact link" href="mailto:info@example.com" lang="en"
+              <li class="footer-contacts__item">
+                <a class="footer-contacts__link" href="mailto:info@example.com" lang="en"
                   >info@example.com</a
                 >
               </li>
-              <li class="footer-contact-item">
-                <a class="footer-contact link" href="tel:+380991111111">+38 099 111 11 11</a>
+              <li class="footer-contacts__item">
+                <a class="footer-contacts__link" href="tel:+380991111111">+38 099 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
-        <div class="ff-item social">
-          <h3 class="social-title">приєднуйтесь</h3>
+        <div class="footer-group social__footer-group">
+          <h3 class="footer-group__title">приєднуйтесь</h3>
           <ul class="social-list footer__social-list">
             <li class="social-list__item">
               <a class="social-list__href social-list__href--dark" href="">
@@ -443,8 +443,8 @@
 
         <!-- subscribe form -->
 
-        <div class="subscribe-form__container">
-          <h3 class="subscribe-form__title">Підпишіться на розсилку</h3>
+        <div class="footer-group subscribe__footer-group">
+          <h3 class="footer-group__title">Підпишіться на розсилку</h3>
           <form action="javascript:void(0);" class="subscribe-form">
             <input
               type="email"
