--- a/portfolio.html
+++ b/portfolio.html
@@ -62,228 +62,228 @@
       <section class="section">
         <div class="container">
           <h2 class="section-title visually-hidden">Галерея робіт</h2>
-          <ul class="secondary-button list">
-            <li class="filter-item">
+          <ul class="gallery-filter">
+            <li class="gallery-filter__item">
               <button class="button-gallery" type="button">Всі</button>
             </li>
-            <li class="filter-item">
+            <li class="gallery-filter__item">
               <button class="button-gallery" type="button">Веб-сайти</button>
             </li>
-            <li class="filter-item">
+            <li class="gallery-filter__item">
               <button class="button-gallery" type="button">Додатки</button>
             </li>
-            <li class="filter-item">
+            <li class="gallery-filter__item">
               <button class="button-gallery" type="button">Дизайн</button>
             </li>
-            <li class="filter-item">
+            <li class="gallery-filter__item">
               <button class="button-gallery" type="button">Маркетинг</button>
             </li>
           </ul>
-          <ul class="gallery list">
+          <ul class="gallery">
             <li class="gallery-item">
-              <a href="" class="gallery link">
-                <div class="img-tumb">
+              <a href="" class="gallery-item__link">
+                <div class="gallery-item__wrap">
                   <img
-                    class="img-block"
+                    class="gallery-item__image"
                     src="./images/squoosh_portfolio1.jpg"
                     alt="Веб-сайт Технокряк"
                     width="370"
                   />
-                  <div class="overlay-background">
-                    <p class="overlay-text">
+                  <div class="gallery-item__overlay-bkg">
+                    <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="gallery-text">
-                  <h3 class="gallery-title">Технокряк</h3>
-                  <p class="gallery-business">Веб-сайт</p>
+                <div class="gallery-item__text-wrap">
+                  <h3 class="gallery-item__text-title">Технокряк</h3>
+                  <p class="gallery-item__text-business">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery link">
-                <div class="img-tumb">
+              <a href="" class="gallery-item__link">
+                <div class="gallery-item__wrap">
                   <img
-                    class="img-block"
+                    class="gallery-item__image"
                     src="./images/squoosh_portfolio2.jpg"
                     alt="Дизайн постер New Orlean vs Golden Star"
                     width="370"
                   />
-                  <div class="overlay-background">
-                    <p class="overlay-text">
+                  <div class="gallery-item__overlay-bkg">
+                    <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="gallery-text">
-                  <h3 class="gallery-title">Постер New Orlean vs Golden Star</h3>
-                  <p class="gallery-business">Дизайн</p>
+                <div class="gallery-item__text-wrap">
+                  <h3 class="gallery-item__text-title">Постер New Orlean vs Golden Star</h3>
+                  <p class="gallery-item__text-business">Дизайн</p>
                 </div>
               </a>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery link">
-                <div class="img-tumb">
+              <a href="" class="gallery-item__link">
+                <div class="gallery-item__wrap">
                   <img
-                    class="img-block"
+                    class="gallery-item__image"
                     src="./images/squoosh_portfolio3.jpg"
                     alt="Додаток ресторан Seafood"
                     width="370"
                   />
-                  <div class="overlay-background">
-                    <p class="overlay-text">
+                  <div class="gallery-item__overlay-bkg">
+                    <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="gallery-text">
-                  <h3 class="gallery-title">Ресторан Seafood</h3>
-                  <p class="gallery-business">Додаток</p>
+                <div class="gallery-item__text-wrap">
+                  <h3 class="gallery-item__text-title">Ресторан Seafood</h3>
+                  <p class="gallery-item__text-business">Додаток</p>
                 </div>
               </a>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery link">
-                <div class="img-tumb">
+              <a href="" class="gallery-item__link">
+                <div class="gallery-item__wrap">
                   <img
-                    class="img-block"
+                    class="gallery-item__image"
                     src="./images/squoosh_portfolio4.jpg"
                     alt="Маркетинг проект Prime"
                     width="370"
                   />
-                  <div class="overlay-background">
-                    <p class="overlay-text">
+                  <div class="gallery-item__overlay-bkg">
+                    <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="gallery-text">
-                  <h3 class="gallery-title">Проект Prime</h3>
-                  <p class="gallery-business">Маркетинг</p>
+                <div class="gallery-item__text-wrap">
+                  <h3 class="gallery-item__text-title">Проект Prime</h3>
+                  <p class="gallery-item__text-business">Маркетинг</p>
                 </div>
               </a>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery link">
-                <div class="img-tumb">
+              <a href="" class="gallery-item__link">
+                <div class="gallery-item__wrap">
                   <img
-                    class="img-block"
+                    class="gallery-item__image"
                     src="./images/squoosh_portfolio5.jpg"
                     alt="Додаток проект Boxes"
                     width="370"
                   />
-                  <div class="overlay-background">
-                    <p class="overlay-text">
+                  <div class="gallery-item__overlay-bkg">
+                    <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="gallery-text">
-                  <h3 class="gallery-title">Проект Boxes</h3>
-                  <p class="gallery-business">Додаток</p>
+                <div class="gallery-item__text-wrap">
+                  <h3 class="gallery-item__text-title">Проект Boxes</h3>
+                  <p class="gallery-item__text-business">Додаток</p>
                 </div>
               </a>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery link">
-                <div class="img-tumb">
+              <a href="" class="gallery-item__link">
+                <div class="gallery-item__wrap">
                   <img
-                    class="img-block"
+                    class="gallery-item__image"
                     src="./images/squoosh_portfolio6.jpg"
                     alt="Веб-сайт Inspiration has no Borders"
                     width="370"
                   />
-                  <div class="overlay-background">
-                    <p class="overlay-text">
+                  <div class="gallery-item__overlay-bkg">
+                    <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="gallery-text">
-                  <h3 class="gallery-title">Inspiration has no Borders</h3>
-                  <p class="gallery-business">Веб-сайт</p>
+                <div class="gallery-item__text-wrap">
+                  <h3 class="gallery-item__text-title">Inspiration has no Borders</h3>
+                  <p class="gallery-item__text-business">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery link">
-                <div class="img-tumb">
+              <a href="" class="gallery-item__link">
+                <div class="gallery-item__wrap">
                   <img
-                    class="img-block"
+                    class="gallery-item__image"
                     src="./images/squoosh_portfolio7.jpg"
                     alt="Дизайн видання Limited Edition"
                     width="370"
                   />
-                  <div class="overlay-background">
-                    <p class="overlay-text">
+                  <div class="gallery-item__overlay-bkg">
+                    <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="gallery-text">
-                  <h3 class="gallery-title">Видання Limited Edition</h3>
-                  <p class="gallery-business">Дизайн</p>
+                <div class="gallery-item__text-wrap">
+                  <h3 class="gallery-item__text-title">Видання Limited Edition</h3>
+                  <p class="gallery-item__text-business">Дизайн</p>
                 </div>
               </a>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery link">
-                <div class="img-tumb">
+              <a href="" class="gallery-item__link">
+                <div class="gallery-item__wrap">
                   <img
-                    class="img-block"
+                    class="gallery-item__image"
                     src="./images/squoosh_portfolio8.jpg"
                     alt="Маркетинг проект LAB"
                     width="370"
                   />
-                  <div class="overlay-background">
-                    <p class="overlay-text">
+                  <div class="gallery-item__overlay-bkg">
+                    <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="gallery-text">
-                  <h3 class="gallery-title">Проект LAB</h3>
-                  <p class="gallery-business">Маркетинг</p>
+                <div class="gallery-item__text-wrap">
+                  <h3 class="gallery-item__text-title">Проект LAB</h3>
+                  <p class="gallery-item__text-business">Маркетинг</p>
                 </div>
               </a>
             </li>
             <li class="gallery-item">
-              <a href="" class="gallery link">
-                <div class="img-tumb">
+              <a href="" class="gallery-item__link">
+                <div class="gallery-item__wrap">
                   <img
-                    class="img-block"
+                    class="gallery-item__image"
                     src="./images/squoosh_portfolio9.jpg"
                     alt="Додаток Growing Business"
                     width="370"
                   />
-                  <div class="overlay-background">
-                    <p class="overlay-text">
+                  <div class="gallery-item__overlay-bkg">
+                    <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="gallery-text">
-                  <h3 class="gallery-title">Growing Business</h3>
-                  <p class="gallery-business">Додаток</p>
+                <div class="gallery-item__text-wrap">
+                  <h3 class="gallery-item__text-title">Growing Business</h3>
+                  <p class="gallery-item__text-business">Додаток</p>
                 </div>
               </a>
             </li>
